--- a/main_app/static/Golfam-urm/all_news_16.html
+++ b/main_app/static/Golfam-urm/all_news_16.html
@@ -26,8 +26,36 @@
 <div class="container animate__animated animate__fadeIn">
 
     <div class="row mt-5">
-        <div class="col-12 col-md-4 ">
-            <div class="card w-100">
+         <div class="col-md-4 mb-4">
+              <div class="card w-100">
+                <img src="../../static/media/public/img/alo-1.jpg" class="card-img-top" style="height: 170px;"
+                  alt="iron">
+                <div class="card-body">
+                  <h5 class="card-title">آغاز و استارت اولین تولید فله کنسانتره آلبالو</h5>
+                  <p class="card-text">2 مرداد 1404</p>
+                  <a href="#" class="btn btn-primary"
+                    onclick="loadPage('/static/latest-news/latest-1.html'); return false;">مشاهده
+                    خبر</a>
+                   
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-4">
+              <div class="card w-100">
+                <img src="../../static/media/public/img/1-1.jpg" class="card-img-top" style="height: 170px;"
+                  alt="iron">
+                <div class="card-body">
+                  <h5 class="card-title">اصلاح سقف سالن فیلترینگ</h5>
+                  <p class="card-text">2 مرداد 1404</p>
+                  <a href="#" class="btn btn-primary"
+                    onclick="loadPage('/static/latest-news/latest-2.html'); return false;">مشاهده
+                    خبر</a>
+
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-4 ">
+             <div class="card w-100">
                 <img src="../../static/media/public/img/golfam-urm.webp" class="card-img-top img-fluid object-fit-cover"
                     style="height: 166px;" alt="tips">
                 <div class="card-body d-flex flex-column ">
@@ -61,6 +89,18 @@
                     <p class="card-text">21 خرداد 1403</p>
                     <a href="#" class="btn btn-primary"
                         onclick="loadPage('/static/Golfam-urm-news-3/all_news_19.html'); return false;">بیشتر بدانید</a>
+                </div>
+            </div>
+        </div>
+         <div class="col-12 col-md-4 mb-4">
+            <div class="card w-100">
+                <img src="../../static/media/public/img/golfam-urm-6.webp" class="card-img-top img-fluid object-fit-cover"
+                    style="height: 166px;" alt="tips">
+                <div class="card-body d-flex flex-column">
+                    <h5 class="card-title">روغن زیتون ترقی</h5>
+                    <p class="card-text">1 اسفند 1403</p>
+                    <a href="#" class="btn btn-primary"
+                        onclick="loadPage('/static/Golfam-urm-news-7/all_news_23.html'); return false;">بیشتر بدانید</a>
                 </div>
             </div>
         </div>
@@ -102,18 +142,7 @@
                 </div>
             </div>
         </div>
-         <div class="col-12 col-md-4 mb-4">
-            <div class="card w-100">
-                <img src="../../static/media/public/img/golfam-urm-6.webp" class="card-img-top img-fluid object-fit-cover"
-                    style="height: 166px;" alt="tips">
-                <div class="card-body d-flex flex-column">
-                    <h5 class="card-title">روغن زیتون ترقی</h5>
-                    <p class="card-text">1 اسفند 1403</p>
-                    <a href="#" class="btn btn-primary"
-                        onclick="loadPage('/static/Golfam-urm-news-7/all_news_23.html'); return false;">بیشتر بدانید</a>
-                </div>
-            </div>
-        </div>
+        
 
 
     </div>
